--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* =========================================
-   1. GLOBAL VARIABLES & RESET
+   1. GLOBAL VARIABLES & RSET
    ========================================= */
 :root {
     /* ألوان البلازما المتفجرة */
